# robotpy-cscore

./: .gitignore  .gitmodules  .gittrack  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml  dist.yml  gen-docs.yml
cameraserver/: __init__.py  cameraserver.py
cscore/: __init__.py  __main__.py  _info.py  _logging.py  cameraserver.py  grip.py  imagewriter.py
cscore/cvnp/: README.md
cscore/src/: main.cpp
devtools/: subtree.sh
docs/: .gitignore  api.rst  cameraserver.rst  conf.py  gencpp.py  gensidebar.py  index.rst  objects.rst  requirements.txt  setup.py  utilities.rst
examples/: CameraServer.java  cvstream.py  dual_cameraserver.py  enum_usb.py  httpcvstream.py  intermediate_cameraserver.py  quick_cameraserver.py  settings.py  switched_cameraserver.py  usbcvstream.py  usbstream.py
src/: _cscore.cpp  ndarray_converter.cpp  release_gil.hpp  wpiutil_converters.hpp
tests/: test_cv.py  test_import.py
